# word-problems

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
client/: api.ts  index.html  index.js
client/generalUI/: CustomCheckbox.tsx  CustomSlider.tsx  HelpIconTooltip.tsx  NavBar.tsx  PageInfo.tsx  RadioForm.tsx  styleConstants.ts
client/pages/homePage/: HomePage.tsx
client/pages/yearsPage/: YearsPage.tsx
server/: app.py  requirements.txt
server/generators/: names.json  years.py  years_data.json
