[tool.poetry]
name = "word-problems"
version = "0.1.0"
description = ""
authors = ["Jessica Peck <jessypeck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
py-randomizer = "^0.0.3"
fpdf = "^1.7.2"
flask = "^1.1.2"
inflect = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
